--- a/js/mean/app/angular-src/src/index.html
+++ b/js/mean/app/angular-src/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>MEAN Auth App</title>
   <link rel="stylesheet" href="https://bootswatch.com/4/sandstone/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"> -->
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
