--- a/js/examplePages/testPage/index.html
+++ b/js/examplePages/testPage/index.html
@@ -13,11 +13,12 @@
     <h1>Jumbotron</h1>
     <br>
     <div class="jumbotron">
-      <h1 class="display-3">Hello, world!</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-      featured content or information.</p>
+      <h1 class="display-3">display-3</h1>
+      <p class="lead">Lead paragraph. Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Sunt dignissimos laborum eveniet quam.</p>
       <hr class="my-4">
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <p>Usual paragraph. Lorem ipsum dolor sit amet consectetur 
+          adipisicing elit. Sunt dignissimos laborum eveniet quam.</p>
       <p class="lead">
         <a class="btn btn-primary btn-lg" href="#" role="button">Click me!</a>
       </p>
